# PyMtgFall

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
pymtgfall/: __init__.py  connection.py
src/: connection.py  main.py  schema.py
tests/: test_scryfall.py
