[tool.poetry]
name = "pymtgfall"
version = "0.1.0"
description = ""
authors = ["Thomas TJ Dau <tj.pyro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
