[tool.poetry]
name = "pymtgfall"
version = "0.1.0"
description = ""
authors = ["Thomas TJ Dau <tj.pyro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
loguru = "^0.6.0"
trio = "^0.20.0"
httpx-caching = "^0.1a2"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
pylint = "^2.13.5"
pytest = "^7.1.1"
pytest-httpx = "^0.20.0"
pytest-trio = "^0.7.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "C0114, C0115, C0116, R0902, R0904, R0913"

[tool.mypy]
pretty = true
show_absolute_path = true
show_column_numbers = true
show_error_codes = true
files = ["src"]

[[tool.mypy.overrides]]
module = 'trio'
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = 7.0
addopts = "-rA -v --cov src --cov-report html"
testpaths = ["tests"]
required_plugins = ["pytest-httpx", "pytest-trio", "pytest-cov"]

[tool.coverage.run]
source = ["src/"]
branch = true
command_line = "html"

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_empty = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
